# hobot_centerpoint

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: centerpoint_preprocess_5dim.json  nuscenes_lidar_val.lst  test.lst
config/nuscenes_lidar/: nuscenes_lidar.lst
include/: centerpoint_data.h  centerpoint_node.h  centerpoint_publisher.h  jsonutil.h  postprocess.h  preprocess.h
include/utils/: box3d_nms.h  pc_queue.h
launch/: hobot_centerpoint_websocket.launch.py
src/: centerpoint_node.cpp  centerpoint_publisher.cpp  main.cpp  postprocess.cpp  preprocess.cpp
src/utils/: box3d_nms.cc
